--- a/settings.gradle
+++ b/settings.gradle
@@ -1,13 +1,13 @@
 // publish build scans from CI builds
 plugins {
-    id "com.gradle.enterprise" version "3.10"
+    id "com.gradle.enterprise" version "3.18"
 }
 
 gradleEnterprise {
-    server = "https://ge.gradle.org"
+    server = "https://ge.solutions-team.gradle.com"
     buildScan {
         boolean ci = System.getenv('CI') as boolean
-        publishAlwaysIf(ci)
+        publishAlwaysIf(true)
         uploadInBackground = !ci
     }
 }
