Fixed local build issues

--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,7 @@ project.assembleTargetPlatform.doLast {
                     '-p2.ws', Constants.ws,
                     '-p2.arch', Constants.arch,
                     '-roaming',
+                    '-vm', System.getProperty('java.home') + '/bin/java',
                     '-nosplash')
         }
 
